fetch movie details & basic movie card layout

--- a/src/components/results/results.sass
+++ b/src/components/results/results.sass
@@ -5,12 +5,28 @@
     justify-content: center
     
 .results__item
-    width: 300px
-    background-color: gray
+    width: 200px
+    background-color: #02171f
     padding: 10px
     border-radius: 5px
+    margin-right: 10px
+    margin-bottom: 10px
+    cursor: pointer
+    transition: .3s ease-in-out
+.results__item:hover
+    background-color: #000608
+
+
+.item__head
+    height: 70px
+    
+.item__title
+    font-size: 17px
+
+.item__year
+    margin-top: 0
 
 .poster__img
     width: 100%
     display: block
-    height: auto
+    height: 300px
