--- a/src/global.sass
+++ b/src/global.sass
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&subset=latin-ext')
+    
 body
     background-color: #001e29
     color: #fff
+    font-family: 'Source Sans Pro', sans-serif
 
 .button
     padding: 10px 20px
