--- a/src/global.sass
+++ b/src/global.sass
@@ -4,6 +4,7 @@ body
     background-color: #001e29
     color: #fff
     font-family: 'Source Sans Pro', sans-serif
+    margin: 0
 
 .button
     padding: 10px 20px
