--- a/src/components/movieItem/movieItem.sass
+++ b/src/components/movieItem/movieItem.sass
@@ -1,8 +1,45 @@
+.movieItem
+    position: fixed
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
+    width: 100%
+    height: 100%
+    background: rgba(0, 0, 0, 0.8)
+    display: block
+
 .movieItem__wrapper
     position: absolute
     top: 50%
     width: 100%
-    background-color: green
+    background-color: #021e29
     transform: translateY(-50%)
     display: flex
     min-height: 450px
+
+.poster__image
+    height: 100%
+
+.movieItem__details
+    margin: 20px 50px
+    font-size: 20px
+
+.movieItem__title
+    font-size: 55px
+    margin: 0
+
+.ratings
+    font-size: 14px
+
+.rating__source
+    margin-right: 20px
+
+.close
+    position: absolute
+    right: 50px
+    top: 30px
+    font-size: 50px
+    color: lightgray
+    background-color: transparent
+    border: none
